@startuml

title __GENETIC's Class Diagram__\n

  package com.m2i.poe {
      package com.m2i.poe.genetic {
        class DNARepository {
            + load(String uri)
            + getDNA() : DNA
        }
      }
    }

  package com.m2i.poe {
    package com.m2i.poe.genetic {
      class RNA {
          + RNA()
      }
    }
  }

  package com.m2i.poe {
      package com.m2i.poe.genetic {
        class Ribosome {
            + translate(ARN arn) : List<Protein>
        }
      }
    }
  

  package com.m2i.poe {
    package com.m2i.poe.genetic {
      class AminoAcid {
          - symbol : String
          - trigram : String
          - name : String
          + AminoAcid()
          + getSymbol()
          + getTrigram()
          + getName()
          + toString()
      }
    }
  }

  package com.m2i.poe {
      package com.m2i.poe.genetic {
        class Protein {
            - chain : List<AminoAcid>
        }
      }
    }
  

  package com.m2i.poe {
    package com.m2i.poe.genetic {
      class Base {
          - symbol : String
          - name : String
          - familly : String
          + Base(String symbol)
          + getApparie() : Base
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.genetic {
      class DNA {
          + DNA(String code)
          + getComplementary() : List<Base>
          + transcription() : RNA
      }
    }
  }

  package com.m2i.poe {
      package com.m2i.poe.genetic {
        class Nucleotide {
            - strand : List<Base>
            + Nucleotide(String code)
            + Nucleotide()
        }
      }
    }

  Base --> "1" Base : apparie
  DNA o--> "*" Base : strand
  DNA --> "1" RNA : transcription
  Protein o--> "*" AminoAcid : chain
  Ribosome --> "1" RNA
  Ribosome --> "*" Protein : translate
  DNA -up-|> Nucleotide
  RNA -up-|> Nucleotide




right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
